--- a/Client/Components/Layout/NavMenu.razor
+++ b/Client/Components/Layout/NavMenu.razor
@@ -1,6 +1,6 @@
 ﻿<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">TaskFlowUI</a>
+        <a class="navbar-brand" href="">TaskFlow</a>
     </div>
 </div>
 
@@ -15,14 +15,14 @@
         </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
+            <NavLink class="nav-link" href="projects">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Projects
             </NavLink>
         </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="weather">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
+            <NavLink class="nav-link" href="tasks">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Tasks
             </NavLink>
         </div>
     </nav>
