Making some changes to the frontend. Testing Endpoints with frontend. Added some mock data to test with.

--- a/Client/Components/Layout/MainLayout.razor
+++ b/Client/Components/Layout/MainLayout.razor
@@ -6,10 +6,25 @@
     </div>
 
     <main>
-        <div class="top-row px-4">
-            <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
-        </div>
-
+        <nav class="navbar">
+            <div class="container-fluid top-row px-4">
+                <div class="">
+                    <ul>
+                        <li>
+                            <button class="btn btn-primary" type="button">
+                                Login
+                            </button>
+                        </li>
+                        <div></div>
+                        <li>
+                            <button class="btn btn-primary" type="button">
+                                Sign Up
+                            </button>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
         <article class="content px-4">
             @Body
         </article>
